--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: Uptime-Tracker # The name of this repository
 
 sites:
   - name: Funky
-    url: http://funky.yuzhda.com/
+    url: https://funky.yuzhda.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
